kubernetes/apps/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# TODO: Remove when updating chart
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-httproute
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames: ["longhorn.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
